--- a/index.html
+++ b/index.html
@@ -1,48 +1,72 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-  <meta charset="utf-8">
-  <title>Linked List</title>
-  <meta name="author" content="Andrew Anderson">
-  <link rel="stylesheet" href="style.css">
-  <link href='http://fonts.googleapis.com/css?family=IM+Fell+English+SC' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
-  <script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js"></script>
-  <script src="script.js"></script>
+	<meta charset="utf-8">
+	<title>Linked List</title>
+	<meta name="author" content="Andrew Anderson">
+	<link rel="stylesheet" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=IM+Fell+English+SC' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
+	<script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js"></script>
+	<script src="script.js"></script>
 
 </head>
 <body>
-  <div id="container">
-    <header>
-      Linked List
-    </header>
-    
-    <div id="main">
-      <p>Ever forget that one link that you ran across on twitter? Here's the place to store it. Just type in the link, a title (if you want), and a note to save it for later!</p>
+	<div id="container">
+		<header>
+			Linked List
+		</header>
+		
+		<div id="main">
+			<p>Ever forget that one link that you ran across on twitter? Here's the place to store it. Just type in the link, a title (if you want), and a note to save it for later!</p>
+		
+		<section id="addNewLink">
+			<header>Add New</header>
+			<div id="hidden">
+				<p class="link" contenteditable="true">URL</p>
+				<div contenteditable="true" class="link note">Note...</div>
+				<button>Add</button>
+				<button class="btnDelete">Delete</button>
+			</div>
+		</section>
 
-      <section id="addNewLink" class="bottom">
-        <header>Add New</header>
-        <div id="hidden">
-          <p class="link" contenteditable="true">Title</p>
-          <p class="link" contenteditable="true">Link</p>
-          <div contenteditable="true" class="link note">Note...</div>
-          <button>Add</button>
-        </div>
-      </section>
+		<section id="linkList">
+			<section>
+				<div id="hidden">
+					<p class="link"><a href="http://google.com">http://google.com</a></p>
+					<div class="link note">The world's greatest search engine.</div>
+				</div>
+			</section>
+			<section>
+				<div id="hidden">
+					<p class="link"><a href="http://google.com">http://osnews.com</a></p>
+					<div class="link note">The world's greatest search engine.</div>
+				</div>
+			</section>
+			<section>
+				<div id="hidden">
+					<p class="link"><a href="http://google.com">http://arstechnica.com</a></p>
+					<div class="link note">The world's greatest search engine.</div>
+				</div>
+			</section>
+			<section>
+				<div id="hidden">
+					<p class="link"><a href="http://google.com">http://cnn.com</a></p>
+					<div class="link note">The world's greatest search engine.</div>
+				</div>
+			</section>
+		</section>
 
-      <section id="trashBin" class="bottom">
-        <header>Trash</header>
-      </section>
+			
+		<section id="trashBin" class="bottom">
+			<header>Trash</header>
+		</section>
+		</div>
+		
+		<footer>
 
-      <section id="linkList" class="bottom">
-
-      </section>
-    </div>
-    
-    <footer>
-
-    </footer>
-  </div> <!-- end of #container -->
+		</footer>
+	</div> <!-- end of #container -->
 
 </body>
 </html>
