Working on interaction.

--- a/index.html
+++ b/index.html
@@ -20,47 +20,66 @@
 		<div id="main">
 			<p>Ever forget that one link that you ran across on twitter? Here's the place to store it. Just type in the link, a title (if you want), and a note to save it for later!</p>
 		
-		<section id="addNewLink">
-			<header>Add New</header>
-			<div id="hidden">
-				<p class="link" contenteditable="true">URL</p>
-				<div contenteditable="true" class="link note">Note...</div>
-				<button>Add</button>
-				<button class="btnDelete">Delete</button>
-			</div>
-		</section>
+  		<section id="addNewLink">
+  			<header>Add New</header>
+  			<div class="hidden">
+  				<p class="link" contenteditable="true">URL</p>
+  				<div contenteditable="true" class="link note">Note...</div>
+  				<button class="btnAdd">Add</button>
+  				<button class="btnDelete">Delete</button>
+  			</div>
+  		</section>
 
-		<section id="linkList">
-			<section>
-				<div id="hidden">
-					<p class="link"><a href="http://google.com">http://google.com</a></p>
-					<div class="link note">The world's greatest search engine.</div>
-				</div>
-			</section>
-			<section>
-				<div id="hidden">
-					<p class="link"><a href="http://google.com">http://osnews.com</a></p>
-					<div class="link note">The world's greatest search engine.</div>
-				</div>
-			</section>
-			<section>
-				<div id="hidden">
-					<p class="link"><a href="http://google.com">http://arstechnica.com</a></p>
-					<div class="link note">The world's greatest search engine.</div>
-				</div>
-			</section>
-			<section>
-				<div id="hidden">
-					<p class="link"><a href="http://google.com">http://cnn.com</a></p>
-					<div class="link note">The world's greatest search engine.</div>
-				</div>
-			</section>
-		</section>
+  		<section id="linkList">
+  			<section>
+  				<div id="hidden">
+  					<p class="link"><a href="http://google.com">http://google.com</a></p>
+  					<div class="link note">The world's greatest search engine.</div>
+  				</div>
+  			</section>
+  			<section>
+  				<div id="hidden">
+  					<p class="link"><a href="http://google.com">http://osnews.com</a></p>
+  					<div class="link note">The world's greatest search engine.</div>
+  				</div>
+  			</section>
+  			<section>
+  				<div id="hidden">
+  					<p class="link"><a href="http://google.com">http://arstechnica.com</a></p>
+  					<div class="link note">The world's greatest search engine.</div>
+  				</div>
+  			</section>
+  			<section>
+  				<div id="hidden">
+  					<p class="link"><a href="http://google.com">http://cnn.com</a></p>
+  					<div class="link note">The world's greatest search engine.</div>
+  				</div>
+  			</section>
+  		</section>
 
-			
-		<section id="trashBin" class="bottom">
-			<header>Trash</header>
-		</section>
+  		<section id="trashBin" class="bottom">
+  			<header id="trashTop">Trash</header>
+        <section>
+          <div id="hidden">
+            <p class="link"><a href="http://google.com">http://cnn.com</a></p>
+            <div class="link note">The world's greatest search engine.</div>
+          </div>
+        </section>
+        <section>
+          <div id="hidden">
+            <p class="link"><a href="http://google.com">http://cnn.com</a></p>
+            <div class="link note">The world's greatest search engine.</div>
+          </div>
+        </section>
+        <section>
+          <div id="hidden">
+            <p class="link"><a href="http://google.com">http://cnn.com</a></p>
+            <div class="link note">The world's greatest search engine.</div>
+          </div>
+        </section>
+  		</section>
+
+
 		</div>
 		
 		<footer>
