Done visually and functionally in all browsers but IE9, which has lots of fun (ie missing style stuff).

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en" class="no-js">
 <head>
 	<meta charset="utf-8">
-	<title>Linked List</title>
+	<title>microNotes</title>
 	<meta name="author" content="Andrew Anderson">
 	<link rel="stylesheet" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Reenie+Beanie' rel='stylesheet' type='text/css'>
+	<!--
 	<script type="text/javascript" src="http://use.typekit.com/gns4sdl.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+	-->
 	<script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js"></script>
 	<script src="script.js"></script>
 
@@ -15,7 +18,8 @@
 	<div id="container">
 		<header>microNotes</header>
 		
-			<p>Just a quick place to drop notes, links, and anything that you might need later.</p>
+		<p>Just a quick place to drop notes, links, and anything that you might need later.</p>
+
 		<div id="main">
 			<section id="addNewLink">
 			<header class="top">Add New</header>
@@ -28,7 +32,7 @@
 			<section id="linkList">
 			</section>
 
-			<section id="trashBin" class="bottom">
+			<section id="trashBin">
 				<header class="top">Trash</header>
 				<div id="trashList">
 					
