Cleaning up files.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
  microNotes
- Author: Andrew Anderson & Steve Meisner
+ Author: Andrew Anderson
  
  A quick and easy way to store notes, links, thoughts, and anything else that can be typed in a text box.
 -->
@@ -10,7 +10,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>microNotes</title>
-	<meta name="author" content="Andrew Anderson and Steve Meisner">
+	<meta name="author" content="Andrew Anderson">
 	<meta name="description" content="A quick and easy way to store notes, links, thoughts, and anything else that can be typed in a text box.">
 	<link rel="stylesheet" href="css/style.css">
 	
