--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div id="container">
 		<header>microNotes</header>
 		
-		<p>A quick and easy way to store notes, links, thoughts, and anything else that can be typed in a text box. Notes can be moved to the trash which is kept trim at a max number of ten items.</p>
+		<p>A quick and easy way to store notes, links, thoughts, and anything else that can be typed in a text box. Notes can be moved to the trash which is kept trim at a max number of ten items. Notes, including the ones in the trash, are stored using localStorage. URLs in the note text are automatically turned into links.</p>
 
 		<div id="main">
 			<section id="addNewLink">
@@ -48,7 +48,7 @@
 		
 	</div> <!-- end of #container -->
 	<footer>
-		<p>a <a href="http://www.substratalcode.com">substratal code</a> and <a href="http://http://www.wayshortofheaven.com/">way short of heaven</a> project.</p>
+		<p>a <a href="http://www.substratalcode.com">substratal code</a> project.</p>
 	</footer>
 </body>
 </html>
